fix: standardize source value in chat API and clean up unused imports in dashboard and login pages

--- a/presentation_restored.html
+++ b/presentation_restored.html
@@ -6,10 +6,10 @@
   <title>USA Pawn Holdings — Prototype Preview</title>
   <style>
     :root {
-      --bg: #0B1426;
-      --card: #142238;
-      --text: #FFFFFF;
-      --muted: #8B9DB7;
+      --bg: #ffffff;
+      --card: #ffffff;
+      --text: #0e0909;
+      --muted: #272f3b;
       --accent: #4A90D9;
       --accent-2: #5BA0E8;
       --border: rgba(74, 144, 217, 0.25);
@@ -22,7 +22,7 @@
       min-height: 100vh;
       display: grid;
       place-items: center;
-      background: radial-gradient(circle at top left, #111D33, var(--bg));
+      background: #fff;
       color: var(--text);
       font-family: "Playfair Display", Georgia, serif;
       padding: 20px;
