feat: implement logout functionality with cookie clearing and redirect

--- a/presentation_restored.html
+++ b/presentation_restored.html
@@ -124,7 +124,7 @@
       <p class="body">Hi Desiree—while searching pawn services on Google Maps, I found USA Pawn Holdings, reviewed your website and customer-signal footprint, and spotted a clear opportunity around after-hours capture, inventory visibility, and appraisal conversion; I built a working live prototype that demonstrates those fixes in real flows (not slides), and if you’re curious, scan this code to see the full gap report and demo in under a minute.</p>
     </div>
     <div class="qr-wrap">
-      <img class="qr" src="https://api.qrserver.com/v1/create-qr-code/?size=300x300&data=https://usapawn.vercel.app/pitch" alt="QR code to USA Pawn Holdings live pitch page" />
+      <img class="qr" src="https://api.qrserver.com/v1/create-qr-code/?size=300x300&data=https://usa-pawn-holdings.vercel.app/pitch" alt="QR code to USA Pawn Holdings live pitch page" />
       <div class="qr-label">Prototype Preview</div>
       <div class="cta">Scan to view live demo.</div>
     </div>
